# pem-spgemm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TileCSR.h  spgemm.cu  utilities.h
NSPARSE/: common.h  spgemm_nsparse_kernel.cu
